--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ button.white:hover{
     font-size: 14px;
     font-weight: 600;
     color: #818ea0;
+    margin-top: 10px;
 }
 .sec7 p span{
     color: #ffbd27;
